FETF Application routing

--- a/app/views/fetf/_includes/activity-list_task-section_apply.html
+++ b/app/views/fetf/_includes/activity-list_task-section_apply.html
@@ -334,7 +334,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Submit application</a>
+        <a class="govuk-link govuk-task-list__link" href="../../application/v1-0/submit-application/submit" aria-describedby="application-details-2-status">Submit application</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
         <strong class="govuk-tag govuk-tag--blue">
