--- a/app/views/fetf/application/v1-0/about-items/equipment-location-details.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-location-details.html
@@ -14,7 +14,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/fetf-land-details" method="post">
+    <form action="/fetf-items-other-locations" method="post">
 
       <span class="govuk-caption-l">About your equipment</span>
       <h1 class="govuk-heading-l">Equipment location details</h1>
