--- a/app/views/fetf/application/v1-0/items/equipment.html
+++ b/app/views/fetf/application/v1-0/items/equipment.html
@@ -169,14 +169,16 @@
 </span>
 
 
+</form>  
 
 <span style="clear: both; display: block;">
-<button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button" name="viewOtherItems">
-  View other items
-</button>
+  <a href="equipment-list">
+  <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button" name="viewOtherItems">
+    View other items
+  </button>
+  </a>
 </span>
 
-</form>  
   </div>
 
   <div class="govuk-grid-column-one-third">
