--- a/app/views/fetf/application/v1-0/login.html
+++ b/app/views/fetf/application/v1-0/login.html
@@ -75,7 +75,7 @@
       <br>
 
 
-      <a href="../../activity-list/v2-0/index?status=02a&eoi=03b&apply=02a&agree=01&claim-01=01&claim-02=0&claim-03=0">
+      <a href="../../activity-list/v2-0/index?fetf-status=01a&fetf-apply=01&fetf-agree=01&fetf-claim=01">
         <button class="govuk-button" data-module="govuk-button" style="margin-bottom: 40px;">
           Continue
         </button>
