--- a/app/views/fetf/application/v1-0/select-items-complete.html
+++ b/app/views/fetf/application/v1-0/select-items-complete.html
@@ -13,6 +13,8 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+    <form action="/fetf-items-complete" method="post">
+    
     <div class="govuk-form-group">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -37,6 +39,8 @@
     <button type="submit" class="govuk-button" data-module="govuk-button">
       Save and continue
     </button>
+
+  </form>
 
   </div>
   <div class="govuk-grid-column-one-third">
