--- a/app/views/fetf/application/v1-0/submit-application/confirmation.html
+++ b/app/views/fetf/application/v1-0/submit-application/confirmation.html
@@ -89,7 +89,7 @@
 
 
        <p class="govuk-body">
-        <a href="activity4">Go back to the task list</a></p>
+        <a href="../../../activity-list/v2-0/index?fetf-status=01c&fetf-apply=03a&fetf-agree=01&fetf-claim=01">Go back to the task list</a></p>
        </p>
 
        
