--- a/app/views/fetf/application/v1-0/submit-application/submit.html
+++ b/app/views/fetf/application/v1-0/submit-application/submit.html
@@ -24,6 +24,9 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+    <form action="/fetf-submit-application" method="post">
+    
+
     <!-- <span class="govuk-caption-xl">Apply for a Water Management Grant</span> -->
     <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Submit application</h1>
     <span class="govuk-body">Read and agree to submit your application.</span>
@@ -69,6 +72,9 @@
       Submit application
     </button>
 <br>
+
+</form>
+
     <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
       Cancel
     </button>
