--- a/app/views/fetf/index.html
+++ b/app/views/fetf/index.html
@@ -30,11 +30,11 @@ Farming Equipment and Technology Fund
     
     <hr style="margin: 40px 0;">
     <p class="govuk-body"><strong>September 2024</strong> Agreement</p>
-    <p class="govuk-body"><a href="activity-list/v2-0/?fetf-status=02&fetf-apply=03b&fetf-agree=02a&fetf-claim=01">Click to open prototype</a></p>
+    <p class="govuk-body"><a href="activity-list/v2-0/index?fetf-status=02&fetf-apply=03b&fetf-agree=02a&fetf-claim=01">Click to open prototype</a></p>
 
     <hr style="margin: 40px 0;">
     <p class="govuk-body"><strong>October 2024</strong> Claim</p>
-    <p class="govuk-body"><a href="activity-list/v2-0/?fetf-status=03&fetf-apply=03b&fetf-agree=03&fetf-claim=02a">Click to open prototype</a></p>
+    <p class="govuk-body"><a href="activity-list/v2-0/index?fetf-status=03&fetf-apply=03b&fetf-agree=03&fetf-claim=02a">Click to open prototype</a></p>
 
   </div>
 </div>
