Add suffixes to Land details
Added 'hectares' in the input fields

--- a/app/views/fetf/application/v1-0/business-details/land-details.html
+++ b/app/views/fetf/application/v1-0/business-details/land-details.html
@@ -26,7 +26,9 @@
             Agriculture - area of farm in hectares
           </label>
         </h2>
-        <input class="govuk-input govuk-input--width-10" id="agriculture-hectares" name="agricultureHectares" type="text" spellcheck="false" inputmode="numeric">
+        <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-10" id="agriculture-hectares" name="agricultureHectares" type="text" spellcheck="false" inputmode="numeric">
+          <div class="govuk-input__suffix" aria-hidden="true">hectares</div>
+        </div>
 
         <br><br><br>
 
@@ -35,7 +37,9 @@
             Horticulture - area of nursery in hectares
           </label>
         </h2>
-        <input class="govuk-input govuk-input--width-10" id="horticulture-hectares" name="horticultureHectares" type="text" spellcheck="false" inputmode="numeric">
+        <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-10" id="horticulture-hectares" name="horticultureHectares" type="text" spellcheck="false" inputmode="numeric">
+          <div class="govuk-input__suffix" aria-hidden="true">hectares</div>
+        </div>
 
         <br><br><br>
 
@@ -44,7 +48,9 @@
             Foresty - area of woodland in hectares
           </label>
         </h2>
-        <input class="govuk-input govuk-input--width-10" id="forestry-hectares" name="forestryHectares" type="text" spellcheck="false" inputmode="numeric">
+        <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-10" id="forestry-hectares" name="forestryHectares" type="text" spellcheck="false" inputmode="numeric">
+          <div class="govuk-input__suffix" aria-hidden="true">hectares</div>
+        </div>
 
         <br><br><br>
 
