FETF dynamic Item titles

--- a/app/views/fetf/application/v1-0/item-quantity.html
+++ b/app/views/fetf/application/v1-0/item-quantity.html
@@ -15,7 +15,7 @@
 
     <form action="/fetf-item-quantity" method="post">
 
-    <span class="govuk-caption-l">{{ item.title }}<!-- Will need to be a GET statement pulling data from previous page -->Item title (FETF000)</span>
+    <span class="govuk-caption-l">{{ item.title }} (FETF{{ item.itemCode }})</span>
 <div class="govuk-form-group">
   <h1 class="govuk-label-wrapper">
     <label class="govuk-label govuk-label--l" for="quantity">
