--- a/app/views/fetf/application/v1-0/selected-items.html
+++ b/app/views/fetf/application/v1-0/selected-items.html
@@ -34,7 +34,9 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
+    {% set grantTotal = 0 %}
     {% for item in data['selected-items'] %}
+      {% set grantTotal = grantTotal + item.grantTotal %}
       <tr class="govuk-table__row">
         <td class="govuk-table__cell" style="width: 30%;">{{ item.termName }}</td>
         <td class="govuk-table__cell">£{{ item.grantValue }}</td>
@@ -47,12 +49,18 @@
     <tr class="govuk-table__row">
       <td colspan="2"></td>
       <td colspan="3" style="padding: 20px 0; border-bottom: solid 1px #b1b4b6;">Requested grant total</td>
-      <td style="text-align: right; border-bottom: solid 1px #b1b4b6;"><span class="govuk-body-l" style="font-weight: bold;">£1,450.00</span></td>
+      <td style="text-align: right; border-bottom: solid 1px #b1b4b6;">
+        <span class="govuk-body-l" style="font-weight: bold;">
+          {{ grantTotal | currency }}
+        </span>
+      </td>
     </tr>
     <tr class="govuk-table__row">
       <td colspan="2"></td>
       <td colspan="3" style="padding: 20px 0; border-bottom: solid 1px #b1b4b6;">Score total</td>
-      <td style="text-align: right; border-bottom: solid 1px #b1b4b6;"><span class="govuk-body-l" style="font-weight: bold;">55</span></td>
+      <td style="text-align: right; border-bottom: solid 1px #b1b4b6;">
+        <span class="govuk-body-l" style="font-weight: bold;">55</span>
+      </td>
     </tr>
   </tbody>
 </table>
