Updated 'Apply now' button within the guidance

--- a/app/views/fetf/awareness/how-to-apply-for-a-farming-equipment-and-technology-fund-fetf-2024-grant.html
+++ b/app/views/fetf/awareness/how-to-apply-for-a-farming-equipment-and-technology-fund-fetf-2024-grant.html
@@ -135,6 +135,10 @@
             <li>a minimum of £1,000 and a maximum of £50,000 towards slurry items</li>
             <li>a minimum of £1,000 and a maximum of £25,000 towards animal health and welfare items</li>
           </ul>
+          
+          
+          <br><br>
+          <br><br>
 
 
         <h2 class="govuk-heading-l">Check you’re eligible</h2>
@@ -158,14 +162,24 @@
         <p class="govuk-body">Other types of livestock and poultry, including goats, ducks, turkeys, geese and gamebirds, are not eligible for funding.</p>
         
 
+        <br><br>
+
+
         <h3 class="govuk-heading-m">Lump Sum Exit Scheme applicants</h3>
         <p class="govuk-body">You’re not eligible for FETF if you choose to leave farming through the Lump Sum Exit Scheme.</p>
         <p class="govuk-body">If you’re a farmer who has been paid a lump sum but are continuing as a contractor, you can apply for FETF.</p>
+
+
+        <br><br>
 
         <h3 class="govuk-heading-m">Who cannot apply</h3>
         <p class="govuk-body">Government departments, executive agencies and non-departmental public bodies (for example, the Ministry of Defence or the Forestry Commission) cannot apply for a grant.</p>
 
 
+        <br><br>
+        <br><br>
+
+        
         <h2 class="govuk-heading-l">Items you can apply for</h2>
         <p class="govuk-body">You can apply for items from the productivity, slurry and animal health and welfare items and specifications lists.</p>
         <p class="govuk-body">All items must be new items and must meet the relevant specifications in each list.</p>
@@ -174,6 +188,9 @@
         <p class="govuk-body">You can apply for funding for similar items to those funded through other schemes, but not the same item. For example, if you’ve received funding towards the cost of a building through another scheme, you could still apply for a FETF grant to buy machinery to put in the building.</p>
         <p class="govuk-body">You can apply for the same item that you’ve applied for under previous FETF grants. The Rural Payments Agency (RPA) will ask you to explain this. You must keep items that have been funded by FETF grants for 5 years from the date your claim was paid.</p>
 
+
+        <br><br>
+        <br><br>
 
         <h2 class="govuk-heading-l">How much money you’ll receive</h2>
         <p class="govuk-body">The RPA has calculated an expected average cost for each item, based on costs from a cross-section of suppliers.</p>
@@ -190,6 +207,9 @@
           <li>a minimum of £1,000 and a maximum of £25,000 towards animal health and welfare items</li>
         </ul>
         <p class="govuk-body">The grant contribution does not cover the total cost of each item. It’s your responsibility to fund the remaining cost.</p>
+
+        
+        <br><br>
 
 
         <h3 class="govuk-heading-m">Grants of over £25,000</h3>
@@ -211,9 +231,16 @@
         </ul>
 
 
+        <br><br>
+
+
         <h3 class="govuk-heading-m">How funding is allocated</h3>
         <p class="govuk-body">The RPA will allocate funding after all applications within each grant application window have been received and scored.</p>
         <p class="govuk-body">Funding for each of the 3 grants will be allocated starting with the highest scoring applications until it is fully allocated. This will set the minimum threshold for the application window.</p>
+
+
+        <br><br>
+        <br><br>
 
 
         <h2 class="govuk-heading-l">When you can apply</h2>
@@ -222,13 +249,19 @@
         <p class="govuk-body">You can apply between 20 March and 1 May 2024 for animal health and welfare items. This application window will close at midday on 1 May 2024.</p>
 
 
+        <br><br>
+
+
         <h3 class="govuk-heading-m">Application windows</h3>
         <p class="govuk-body">Two more application windows for productivity, slurry and animal health and welfare items are expected to open in 2024. The total budget for each grant is split evenly across the application windows.</p>
         <p class="govuk-body">The average costs and grant amounts for the items are expected to be the same in each application window.</p>
         <p class="govuk-body">If your application falls below the scoring threshold and is unsuccessful, the RPA will reject it. You will be able to apply again in a future application window.</p>
         <p class="govuk-body">You can only accept one grant funding agreement (GFA) for each grant. When you have accepted a GFA you cannot apply again for the same grant in 2024. For example, if you accept a GFA for a productivity grant in the first window, you cannot apply for a productivity grant in the second or third window.</p>
 
-      
+      <br><br>
+      <br><br>
+
+
         <h2 class="govuk-heading-l">How to apply</h2>
         <p class="govuk-body">Follow these steps to apply for FETF:</p>
         <ol class="govuk-list govuk-list--number">
@@ -272,12 +305,22 @@
         <p class="govuk-body">Use the <a class="govuk-link" href="#">Farming Investment Fund</a> service to accept your GFA by the deadline set out in your GFA email. You’ll need to select each grant to accept each GFA.</p>
         <p class="govuk-body">It’s important that you read and understand the steps you’ll need to follow to <a class="govuk-link" href="#">claim your FETF 2024 grant payment.</a></p>
 
+
+        <br><br>
+        
+
+        <p class="govuk-body"><strong>Productivity and Slurry grant</strong></p>
         <a href="../" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
           Apply now
           <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
             <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
           </svg>
         </a>
+        <p class="govuk-body"><strong>Animal Health and Welfare grant</strong></p>
+        <p class="govuk-body">Now closed for applications.</p>
+
+
+        <br><br>
 
 
         <h3 class="govuk-heading-m">Refundable deposits</h3>
@@ -287,6 +330,9 @@
         <p class="govuk-body">The RPA will reject your claim if you do not meet these conditions.</p>
 
 
+        <br><br>
+
+
         <h3 class="govuk-heading-m">Animal Health and Welfare grant: evidence of vet advice</h3>
         <p class="govuk-body">If you’re applying for an Animal Health and Welfare grant, you can increase your application score by providing evidence that you’ve discussed your application with a vet. </p>
         <p class="govuk-body">You can get vet advice by telephone, email, or as part of a vet visit. You may be eligible to apply for a fully funded vet visit as part of the <a class="govuk-link" href="#">Sustainable Farming Incentive (SFI) annual health and welfare review.</a></p>
@@ -294,6 +340,10 @@
         <p class="govuk-body">You’ll need to provide your vet’s details, the date of the discussion and permission for us to contact your vet when you apply.</p>
 
 
+        <br><br>
+        <br><br>
+
+        
         <h2 class="govuk-heading-l">Changing or withdrawing your application</h3>
         <p class="govuk-body">You can save and make changes to your application before you submit it, using the <a class="govuk-link" href="#">Farming Investment Fund service</a>.</p>
         <p class="govuk-body">Make sure that your application is complete before you submit it.</p>
@@ -301,6 +351,9 @@
         <p class="govuk-body">If you need to withdraw your application after you’ve submitted it, email <a class="govuk-link" href="#">FETFEnquiries@rpa.gov.uk</a>. Include your FETF reference number.</p>
         <p class="govuk-body">If you withdraw your application, you cannot submit another application until a new application window is open.</p>
 
+
+        <br><br>
+        <br><br>
 
         <h2 class="govuk-heading-l">Published data on successful applications</h3>
           <p class="govuk-body">The Department for Environment, Food and Rural Affairs (Defra) is legally required to publish data about grants made for productivity and slurry items.  </p>
