Header updated from water to productivity

--- a/app/views/fetf/agreement/v1-3/accept-grant-funding-agreement.html
+++ b/app/views/fetf/agreement/v1-3/accept-grant-funding-agreement.html
@@ -1,4 +1,5 @@
-{% extends "layouts/main-agreement-round-2.html" %}
+
+{% extends "layouts/main-fetf.html" %}
 
 {% block pageTitle %}
 Accept grant funding agreement
