--- a/app/views/fetf/agreement/v1-3/review-terms-and-conditions.html
+++ b/app/views/fetf/agreement/v1-3/review-terms-and-conditions.html
@@ -1,7 +1,12 @@
-{% extends "layouts/main-agreement-round-2.html" %}
+{% extends "layouts/main-fetf.html" %}
 
 {% block pageTitle %}
 Review terms and conditions
+{% endblock %}
+
+
+{% block beforeContent %}
+{% include "../../../_includes/phase-banner_alpha.html" %}
 {% endblock %}
 
 {% block content %}
