--- a/app/views/fetf/agreement/v1-3/agreement-accepted.html
+++ b/app/views/fetf/agreement/v1-3/agreement-accepted.html
@@ -1,4 +1,5 @@
-{% extends "layouts/main-agreement-round-2.html" %}
+
+{% extends "layouts/main-fetf.html" %}
 
 {% block pageTitle %}
   GOV.UK page template – {{ serviceName }} – GOV.UK Prototype Kit
