--- a/app/views/fetf/agreement/v1-3/what-you-need-to-do.html
+++ b/app/views/fetf/agreement/v1-3/what-you-need-to-do.html
@@ -1,7 +1,11 @@
-{% extends "layouts/main-agreement-round-2.html" %}
+{% extends "layouts/main-fetf.html" %}
 
 {% block pageTitle %}
 What you need to do
+{% endblock %}
+
+{% block beforeContent %}
+{% include "../../../_includes/phase-banner_alpha.html" %}
 {% endblock %}
 
 {% block content %}
