Small grants headers updated to productivity

--- a/app/views/fetf/agreement/v1-3/accept-grant-funding-agreement.html
+++ b/app/views/fetf/agreement/v1-3/accept-grant-funding-agreement.html
@@ -5,6 +5,11 @@
 Accept grant funding agreement
 {% endblock %}
 
+
+{% block beforeContent %}
+{% include "../../_includes/phase-banner_alpha.html" %}
+{% endblock %}
+
 {% block content %}
 
 <div class="govuk-width-container">
