--- a/app/views/fetf/agreement/v1-3/agreement-detail.html
+++ b/app/views/fetf/agreement/v1-3/agreement-detail.html
@@ -5,6 +5,10 @@
 Agreement details
 {% endblock %}
 
+{% block beforeContent %}
+{% include "../../_includes/phase-banner_alpha.html" %}
+{% endblock %}
+
 {% block content %}
 
 <div class="govuk-width-container">
