--- a/app/views/fetf/agreement/v1-3/review-terms-and-conditions.html
+++ b/app/views/fetf/agreement/v1-3/review-terms-and-conditions.html
@@ -6,7 +6,7 @@ Review terms and conditions
 
 
 {% block beforeContent %}
-{% include "../../../_includes/phase-banner_alpha.html" %}
+{% include "../../_includes/phase-banner_alpha.html" %}
 {% endblock %}
 
 {% block content %}
