--- a/app/views/fetf/agreement/v1-3/what-you-need-to-do.html
+++ b/app/views/fetf/agreement/v1-3/what-you-need-to-do.html
@@ -5,7 +5,7 @@ What you need to do
 {% endblock %}
 
 {% block beforeContent %}
-{% include "../../../_includes/phase-banner_alpha.html" %}
+{% include "../../_includes/phase-banner_alpha.html" %}
 {% endblock %}
 
 {% block content %}
