--- a/app/views/fetf/claim/v1-0/index.html
+++ b/app/views/fetf/claim/v1-0/index.html
@@ -1,7 +1,11 @@
-{% extends "layouts/main-agreement-round-2.html" %}
+{% extends "layouts/main-fetf.html" %}
 
 {% block pageTitle %}
 Start your claim
+{% endblock %}
+
+{% block beforeContent %}
+{% include "../../_includes/phase-banner_alpha.html" %}
 {% endblock %}
 
 
