--- a/app/views/fetf/claim/v1-0/upload.html
+++ b/app/views/fetf/claim/v1-0/upload.html
@@ -1,8 +1,10 @@
-{% extends "layouts/main-claim-round-2.html" %}
+{% extends "layouts/main-fetf.html" %}
 
 {% block pageTitle %}
   Upload evidence
 {% endblock %}
+
+
 
 {% block content %}
 
