--- a/app/views/fetf/awareness/how-to-apply-for-a-farming-equipment-and-technology-fund-fetf-2024-grant.html
+++ b/app/views/fetf/awareness/how-to-apply-for-a-farming-equipment-and-technology-fund-fetf-2024-grant.html
@@ -310,7 +310,7 @@
         
 
         <p class="govuk-body"><strong>Productivity and Slurry grant</strong></p>
-        <a href="../" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+        <a href="/fetf/application/v1-0/login" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
           Apply now
           <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
             <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
