--- a/app/views/fetf/claim/v1-0/confirmation.html
+++ b/app/views/fetf/claim/v1-0/confirmation.html
@@ -1,6 +1,7 @@
-{% extends "layouts/main-claim-round-2.html" %}
+{% extends "layouts/main-fetf.html" %}
 
 {% set pageName="Confirmation" %}
+
 
 {% block content %}
 
