--- a/app/views/fetf/claim/v1-0/gps2.html
+++ b/app/views/fetf/claim/v1-0/gps2.html
@@ -1,7 +1,11 @@
-{% extends "layouts/main-claim-round-2.html" %}
+{% extends "layouts/main-fetf.html" %}
 
 {% block pageTitle %}
 Upload6
+{% endblock %}
+
+{% block beforeContent %}
+{% include "../../_includes/phase-banner_alpha.html" %}
 {% endblock %}
 
 {% block content %}
