--- a/app/views/fetf/claim/v1-0/harvest.html
+++ b/app/views/fetf/claim/v1-0/harvest.html
@@ -1,8 +1,9 @@
-{% extends "layouts/main-claim-round-2.html" %}
+{% extends "layouts/main-fetf.html" %}
 
 {% block pageTitle %}
 Upload3
 {% endblock %}
+
 
 {% block content %}
 
