Update header to productivity

--- a/app/views/fetf/application/v1-0/submit-application/confirmation.html
+++ b/app/views/fetf/application/v1-0/submit-application/confirmation.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main-application-round-2.html" %}
+{% extends "layouts/main-fetf.html" %}
 
 {% set pageName="Confirmation" %}
 
@@ -89,7 +89,7 @@
 
 
        <p class="govuk-body">
-        <a href="../../../activity-list/v2-0/index?fetf-status=01c&fetf-apply=03a&fetf-agree=01&fetf-claim=01">Go back to the task list</a></p>
+        <a href="../../../activity-list/v2-0/index?fetf-status=02&fetf-apply=03b&fetf-agree=02a&fetf-claim=01">Go back to the task list</a></p>
        </p>
 
        
