Updates claims to reflect the chosen selected items and updated back links

--- a/app/views/fetf/claim/v1-0/harvest2.html
+++ b/app/views/fetf/claim/v1-0/harvest2.html
@@ -53,7 +53,10 @@ Upload3
   </p>
 </div>
 
-<a href="#" class="govuk-back-link">Back</a>
+{{ govukBackLink({
+  text: "Back",
+  href: "javascript:history.back()"
+}) }}
 
 
 <br><br>
