--- a/app/views/fetf/_includes/body-content_agreement-detail-main-block.html
+++ b/app/views/fetf/_includes/body-content_agreement-detail-main-block.html
@@ -1,7 +1,7 @@
 <p class="govuk-body-l">Your application for the Farming Equipment and Technology Fund (FETF) Productivity and Slurry 2023 grant has been approved.</p>
 
 <span class="content-section">
-<p class="govuk-body">You have been awarded a grant of <strong>£20,000.00</strong> for the items:</p>
+<p class="govuk-body">You have been awarded a grant of <strong>{{ item.grantTotal | currency }}</strong> for the items:</p>
 
 <!-- TABLE CONTENT -->
 <table class="govuk-table">
@@ -14,12 +14,20 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
+    {% set grantTotal = 0 %}
+    {% set scoreTotal = 0 %}
+    {% for item in data['selected-items'] %}
+      {% set grantTotal = grantTotal + item.grantTotal %}
+      {% set scoreTotal = scoreTotal + item.score %}
     <tr class="govuk-table__row">
-      <td scope="row" class="govuk-table__cell">Paper pot transplanter</td>
+      <td scope="row" class="govuk-table__cell">{{ item.termName }}</td>
       <td class="govuk-table__cell">FETF4</td>
-      <td class="govuk-table__cell govuk-table__cell--numeric">4</td>
-      <td class="govuk-table__cell govuk-table__cell--numeric">£2,000.00</td>
+      <td class="govuk-table__cell govuk-table__cell--numeric">{{ item.quantity }}</td>
+      <td class="govuk-table__cell govuk-table__cell--numeric">
+        £{{ item.grantValue }}
+      </td>
     </tr>
+    {% endfor %}
     <tr class="govuk-table__row">
       <td scope="row" class="govuk-table__cell">Salad leaf harvester</td>
       <td class="govuk-table__cell">FETF8</td>
@@ -54,7 +62,7 @@
       <td scope="row" class="govuk-table__cell"><strong>Total</strong></td>
       <td class="govuk-table__cell"></td>
       <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-      <td class="govuk-table__cell govuk-table__cell--numeric"><strong>£20,000.00</strong></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><strong>{{ grantTotal | currency }}</strong></td>
     </tr>
   </tbody>
 </table>
