--- a/app/views/fetf/claim/v1-0/gps.html
+++ b/app/views/fetf/claim/v1-0/gps.html
@@ -19,7 +19,10 @@ Upload6
   </p>
 </div>
 
-<a href="#" class="govuk-back-link">Back</a>
+{{ govukBackLink({
+  text: "Back",
+  href: "javascript:history.back()"
+}) }}
 
 
 <br><br>
