--- a/app/views/fetf/claim/v1-0/shoe2.html
+++ b/app/views/fetf/claim/v1-0/shoe2.html
@@ -48,7 +48,10 @@ Upload5
   </p>
 </div>
 
-<a href="#" class="govuk-back-link">Back</a>
+{{ govukBackLink({
+  text: "Back",
+  href: "javascript:history.back()"
+}) }}
 
 
 <br><br>
