--- a/app/views/fetf/claim/v1-0/slurry.html
+++ b/app/views/fetf/claim/v1-0/slurry.html
@@ -17,7 +17,10 @@ Upload4
   </p>
 </div>
 
-<a href="#" class="govuk-back-link">Back</a>
+{{ govukBackLink({
+  text: "Back",
+  href: "javascript:history.back()"
+}) }}
 
 
 <br><br>
