Confirmation emails mocked up for small grants

--- a/app/views/fetf/agreement/v1-3/agreement-accepted.html
+++ b/app/views/fetf/agreement/v1-3/agreement-accepted.html
@@ -42,6 +42,10 @@
           <br>
         <p class="govuk-body"><a href="../../activity-list/v2-0/?fetf-status=03&fetf-apply=03b&fetf-agree=03&fetf-claim=02a">Go back to grant task list</a></p>
 
+        <p class="govuk-body">
+          <a href="../../agreement/v1-3/email-agreement-accepted.html">Go to email</a></p>
+         </p>
+
         
         </form>
       
