--- a/app/views/fetf/application/v1-0/submit-application/confirmation.html
+++ b/app/views/fetf/application/v1-0/submit-application/confirmation.html
@@ -92,6 +92,11 @@
         <a href="../../../activity-list/v2-0/index?fetf-status=02&fetf-apply=03b&fetf-agree=02a&fetf-claim=01">Go back to the task list</a></p>
        </p>
 
+
+       <p class="govuk-body">
+        <a href="../../../application/v1-0/submit-application/email-received">Go to email</a></p>
+       </p>
+
        
  
       </div>
