--- a/app/views/fetf/activity-list/v2-0/email-submit-claim.html
+++ b/app/views/fetf/activity-list/v2-0/email-submit-claim.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta content="telephone=no" name="format-detection" /> <!-- need to add formatting for real phone numbers -->
   <meta name="viewport" content="width=device-width" />
-  <title>Received:FETF grant application</title>
+  <title>Submit your FETF claim by 10 December 2024</title>
 
   <style type="text/css">
     @media only screen and (min-device-width: 581px) {
@@ -126,7 +126,7 @@
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
 
 
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Received: FETF grant application<br><br>
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Submit your FETF claim by 10 December 2024<br><br>
 
           <script>
             function navigateToPage() {
@@ -144,7 +144,7 @@
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
               Dear John Smith,<br><br>
                           
-              We have received your FETF grant application.
+              Your FETF grant claim is due by 11:59pm on <strong> 10 December 2024</strong>.
 
             </p>
 
@@ -154,14 +154,17 @@
 
 
 
-            <strong>What happens next</strong><br>
+            <strong>What you need to do</strong><br>
 
-            <p>The RPA aim to process applications within 6 weeks of the application window closing.</p>
-            <p>The RPA will be in touch when they have assessed your application. They will tell
-              you if your project scored well enough to receive grant funding.</p>
-            <p>The RPA will assess your application against other projects. You will not
-              automatically get a grant, as the grant is expected to be highly competitive.</p>
-            <p>If your application is successful, you’ll be sent a grant funding agreement.</p>
+            <p>You need to <a href="/_common/not-testing.html">check what evidence you must provide with your claim</a>.</p>
+            <p>You need evidence that each item you are claiming for:</p>
+            <ul>
+              <li>has been purchased (for example, invoices)</li>
+              <li>has been paid in full (for example, receipts and bank statements – you can
+                cross out other transactions)</li>
+              <li>is in place and operational (for example, photos, videos)</li>
+            </ul>
+            <p>When you have all your evidence, <a href="/_common/not-testing.html">submit your claim and evidence</a>.</p>
              
              
 
@@ -195,10 +198,11 @@
 
 
               <div class="govuk-details__text">
-                <strong>If you have questions about your application</strong><br><br>
+                <strong>Questions about your claim</strong><br><br>
                 
-                If you have any questions about your application, call the RPA and follow the options
-for the Farming Equipment and Technology Fund scheme.<br>
+                If you have any questions about your claim or you cannot make the claim date, call
+                the RPA and follow the options for the Farming Equipment and Technology Fund
+                scheme.<br>
   
 
               <p class="govuk-body">
@@ -225,6 +229,7 @@ for the Farming Equipment and Technology Fund scheme.<br>
 
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Yours sincerely,</p>
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Rural Payments Agency</p>
+            <p class="govuk-body withdraw-link"><a href="../../activity-list/v2-0/?fetf-status=03&fetf-apply=03b&fetf-agree=03&fetf-claim=02a">Back to task list</a></p>
 						
 
       </td>
