--- a/app/views/fetf/application/v1-0/submit-application/email-received.html
+++ b/app/views/fetf/application/v1-0/submit-application/email-received.html
@@ -225,7 +225,9 @@ for the Farming Equipment and Technology Fund scheme.<br>
 
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Yours sincerely,</p>
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Rural Payments Agency</p>
-						
+            <p class="govuk-body">
+              <a href="../../../application/v1-0/submit-application/email-application-approved">Go to next email</a></p>
+             </p>
 
       </td>
       <td width="10" valign="middle"><br /></td>
