--- a/app/views/fetf/agreement/v1-3/email-agreement-accepted.html
+++ b/app/views/fetf/agreement/v1-3/email-agreement-accepted.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta content="telephone=no" name="format-detection" /> <!-- need to add formatting for real phone numbers -->
   <meta name="viewport" content="width=device-width" />
-  <title>Received:FETF grant application</title>
+  <title>Agreement accepted: FETF grant</title>
 
   <style type="text/css">
     @media only screen and (min-device-width: 581px) {
@@ -126,7 +126,7 @@
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
 
 
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Received: FETF grant application<br><br>
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Agreement accepted: FETF grant<br><br>
 
           <script>
             function navigateToPage() {
@@ -144,24 +144,58 @@
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
               Dear John Smith,<br><br>
                           
-              We have received your FETF grant application.
+              You have accepted your grant funding agreement and so can now purchase your
+items and submit your claim.
 
             </p>
 
-						
+            <p>Your FETF grant claim is due by 11:59pm on <strong> 10 December 2024</strong>.</p>
+						<p>Download copies of your agreement documents:</p>
+            <ul>
+              <li><a href="/_common/not-testing.html">Your grant funding agreement</a></li>
+              <li><a href="/_common/not-testing.html">FETF terms and conditions</a></li>
+            </ul>
+
+
             <hr style="margin: 30px 0;">
 
 
+            <strong>What you need to do</strong><br>
+
+            <p>You need to <a href="/_common/not-testing.html">check what evidence you must provide with your claim</a>.</p>
+            <p>You need evidence that each item you are claiming for:</p>
+            <ul>
+              <li>has been purchased (for example, invoices)</li>
+              <li>has been paid in full (for example, receipts and bank statements – you can
+                cross out other transactions)</li>
+              <li>is in place and operational (for example, photos, videos)</li>
+            </ul>
+            <p>When you have all your evidence, <a href="/_common/not-testing.html">submit your claim and evidence</a>.</p>
+             
+             
+
+           <hr style="margin: 30px 0;">
 
 
-            <strong>What happens next</strong><br>
 
-            <p>The RPA aim to process applications within 6 weeks of the application window closing.</p>
-            <p>The RPA will be in touch when they have assessed your application. They will tell
-              you if your project scored well enough to receive grant funding.</p>
-            <p>The RPA will assess your application against other projects. You will not
-              automatically get a grant, as the grant is expected to be highly competitive.</p>
-            <p>If your application is successful, you’ll be sent a grant funding agreement.</p>
+
+           <strong>Changes to your agreement</strong><br>
+
+           <p>If you need to make a change to your project from what is set out in your grant
+            funding agreement, you must tell the RPA as soon as possible.</p>
+           <p>Examples include:</p>
+           <ul>
+             <li>if you are finding it difficult to get an item(s)</li>
+             <li>if you are unable to meet the claim deadline</li>
+           </ul>
+
+            <p>Your application must still be above the minimum grant amount and the score must
+            be above the minimum threshold. If you fall below this score, your application will no
+            longer be eligible for funding. (The cut off score for FETF 2023 was 75% and the
+            minimum grant amount was £1,000.)</p>
+
+
+           
              
              
 
@@ -178,27 +212,14 @@
 
 
        
-            <div class="govuk-details__text">
-              <strong>You must not purchase the items yet</strong><br><br>
-              
-              Committing to any costs (such as placing orders) before you receive a grant funding agreement will invalidate your application.<br>
-
-
-              <br><br>
-
-              <strong>Withdrawing your application</strong><br><br>
-              
-              If you do not want the grant funding, you can <a href="/_common/not-testing.html">withdraw your application.</a><br>
-              
-
-              <hr style="margin: 30px 0;">
-
+            
 
               <div class="govuk-details__text">
-                <strong>If you have questions about your application</strong><br><br>
+                <strong>Questions about your agreement or claims</strong><br><br>
                 
-                If you have any questions about your application, call the RPA and follow the options
-for the Farming Equipment and Technology Fund scheme.<br>
+                If you have any questions about your agreement or claim or you cannot make the
+claim date, call the RPA and follow the options for the Farming Equipment and
+Technology Fund scheme.<br>
   
 
               <p class="govuk-body">
@@ -212,8 +233,13 @@ for the Farming Equipment and Technology Fund scheme.<br>
               <a href="/_common/not-testing.html">FETFenquiries@rpa.gov.uk</a></p>
             </div> 
   
-       
+            <hr style="margin: 30px 0;">
 
+            <div class="govuk-details__text">
+              <strong>Withdrawing your application</strong><br><br>
+              
+              If you no longer want the grant funding, you can withdraw your application before
+you make a claim.<br>
 
        
 
@@ -225,15 +251,24 @@ for the Farming Equipment and Technology Fund scheme.<br>
 
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Yours sincerely,</p>
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Rural Payments Agency</p>
+            <p class="govuk-body withdraw-link"><a href="../../activity-list/v2-0/email-submit-claim.html">Go to next email</a></p>
+           
 						
 
       </td>
       <td width="10" valign="middle"><br /></td>
+
+            
     </tr>
     <tr>
       <td height="30"><br /></td>
+
+      
     </tr>
   </table>
 
+
+
+  
 </body>
 </html>
