--- a/app/views/fetf/application/v1-0/submit-application/email-application-approved.html
+++ b/app/views/fetf/application/v1-0/submit-application/email-application-approved.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta content="telephone=no" name="format-detection" /> <!-- need to add formatting for real phone numbers -->
   <meta name="viewport" content="width=device-width" />
-  <title>Received:FETF grant application</title>
+  <title>Application approved: FETF grant</title>
 
   <style type="text/css">
     @media only screen and (min-device-width: 581px) {
@@ -126,7 +126,7 @@
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
 
 
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Received: FETF grant application<br><br>
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Application approved: FETF grant<br><br>
 
           <script>
             function navigateToPage() {
@@ -144,7 +144,7 @@
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
               Dear John Smith,<br><br>
                           
-              We have received your FETF grant application.
+              Your application for the FETF grant (Reference: WM-VMA-5678) has been approved.
 
             </p>
 
@@ -154,15 +154,19 @@
 
 
 
-            <strong>What happens next</strong><br>
+            <strong>What you need to do</strong><br>
 
-            <p>The RPA aim to process applications within 6 weeks of the application window closing.</p>
-            <p>The RPA will be in touch when they have assessed your application. They will tell
-              you if your project scored well enough to receive grant funding.</p>
-            <p>The RPA will assess your application against other projects. You will not
-              automatically get a grant, as the grant is expected to be highly competitive.</p>
-            <p>If your application is successful, you’ll be sent a grant funding agreement.</p>
+            <p>Your grant funding agreement is ready for you to read and accept.</p>
+            <p>You must read and accept the agreement by 11:59pm on <strong>16 August 2024 </strong>or the
+              offer will expire and we cannot award you a grant.</p>
+            <p> <a href="/_common/not-testing.html">Read and accept your grant funding agreement</a></p>
+            <p>Once you’ve reviewed and accepted your agreement, you can download a copy for
+              your own records.</p>
              
+
+            <strong>If you do not want to accept your agreement</strong><br>
+
+            <p>If you do not want to accept your agreement, you should <a href="/_common/not-testing.html">withdraw your application.</a></p>
              
 
            <hr style="margin: 30px 0;">
@@ -178,20 +182,8 @@
 
 
        
-            <div class="govuk-details__text">
-              <strong>You must not purchase the items yet</strong><br><br>
-              
-              Committing to any costs (such as placing orders) before you receive a grant funding agreement will invalidate your application.<br>
-
-
-              <br><br>
-
-              <strong>Withdrawing your application</strong><br><br>
-              
-              If you do not want the grant funding, you can <a href="/_common/not-testing.html">withdraw your application.</a><br>
-              
-
-              <hr style="margin: 30px 0;">
+           
+ 
 
 
               <div class="govuk-details__text">
@@ -225,7 +217,9 @@ for the Farming Equipment and Technology Fund scheme.<br>
 
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Yours sincerely,</p>
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Rural Payments Agency</p>
-						
+            <p class="govuk-body">
+              <a href="../../../activity-list/v2-0/index?fetf-status=02&fetf-apply=03b&fetf-agree=02a&fetf-claim=01">Go back to the task list</a></p>
+             </p>
 
       </td>
       <td width="10" valign="middle"><br /></td>
