--- a/app/views/fetf/claim/v1-0/confirmation.html
+++ b/app/views/fetf/claim/v1-0/confirmation.html
@@ -79,8 +79,10 @@
 
 
 
+       
+
        <p class="govuk-body">
-        <a href="index?fetf-status=04&fetf-apply=03b&fetf-agree=03&fetf-claim=03">Go back to task list</a></p>
+        <a href="../../claim/v1-0/email-submitted">Go to email</a></p>
        </p>
 
        
