--- a/app/views/fetf/claim/v1-0/email-submitted.html
+++ b/app/views/fetf/claim/v1-0/email-submitted.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta content="telephone=no" name="format-detection" /> <!-- need to add formatting for real phone numbers -->
   <meta name="viewport" content="width=device-width" />
-  <title>Application approved: FETF grant</title>
+  <title>Submitted: FETF grant claim</title>
 
   <style type="text/css">
     @media only screen and (min-device-width: 581px) {
@@ -126,7 +126,7 @@
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
 
 
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Application approved: FETF grant<br><br>
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Submitted: FETF grant claim<br><br>
 
           <script>
             function navigateToPage() {
@@ -144,53 +144,26 @@
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
               Dear John Smith,<br><br>
                           
-              Your application for the FETF grant (Reference: WM-VMA-5678) has been approved.
-
+              <strong>Claim submitted:</strong> reference number<strong> SJV1629G</strong>
             </p>
+            <p>We have received your claim.</p>
+            <p>We will assess your claim and let you know if we need any further information.</p>
+            <p>We aim to process claims within 30 working days.</p>
+            <p>You will get a notification when your claim is approved and paid.</p>
 
 						
-            <hr style="margin: 30px 0;">
+      
 
 
-
-
-            <strong>What you need to do</strong><br>
-
-            <p>Your grant funding agreement is ready for you to read and accept.</p>
-            <p>You must read and accept the agreement by 11:59pm on <strong>16 August 2024 </strong>or the
-              offer will expire and we cannot award you a grant.</p>
-            <p> <a href="/_common/not-testing.html">Read and accept your grant funding agreement</a></p>
-            <p>Once you’ve reviewed and accepted your agreement, you can download a copy for
-              your own records.</p>
-             
-
-            <strong>If you do not want to accept your agreement</strong><br>
-
-            <p>If you do not want to accept your agreement, you should <a href="/_common/not-testing.html">withdraw your application.</a></p>
-             
-
-           <hr style="margin: 30px 0;">
-
-
-
-
-
-
-
-
-
-
-
-       
-           
- 
+              <hr style="margin: 30px 0;">
 
 
               <div class="govuk-details__text">
-                <strong>If you have questions about your application</strong><br><br>
+                <strong>If you have questions about your claim</strong><br><br>
                 
-                If you have any questions about your application, call the RPA and follow the options
-for the Farming Equipment and Technology Fund scheme.<br>
+                If you have any questions about your claim or you cannot make the claim date, call
+the RPA and follow the options for the Farming Equipment and Technology Fund
+scheme.<br>
   
 
               <p class="govuk-body">
@@ -206,9 +179,13 @@ for the Farming Equipment and Technology Fund scheme.<br>
   
        
 
+            <hr style="margin: 30px 0;">
 
        
-
+            <strong>Withdrawing your claim</strong><br><br>
+              
+            If you do not want the grant funding, you can <a href="/_common/not-testing.html">withdraw your claim.</a><br>
+            
 
 
 
@@ -218,7 +195,10 @@ for the Farming Equipment and Technology Fund scheme.<br>
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Yours sincerely,</p>
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Rural Payments Agency</p>
 						
-
+            <p class="govuk-body">
+              <a href="index?fetf-status=04&fetf-apply=03b&fetf-agree=03&fetf-claim=03">Go back to task list</a></p>
+             </p>
+             
       </td>
       <td width="10" valign="middle"><br /></td>
     </tr>
