--- a/app/views/fetf/awareness/how-to-apply-for-a-farming-equipment-and-technology-fund-fetf-2024-grant.html
+++ b/app/views/fetf/awareness/how-to-apply-for-a-farming-equipment-and-technology-fund-fetf-2024-grant.html
@@ -73,7 +73,7 @@
 <br><br>
 
     <div style="width: 960px; height: 56px; position: relative; background: #F3F2F1;">
-      <p class="govuk-body" style="margin-top: 15px; position: absolute; left: 40px;"><strong>Applies to England</strong></p>
+      <p class="govuk-body" style="margin-top: 15px; position: absolute; left: 40px;"><strong>Applies to England and Ireland</strong></p>
     </div>
     
 <br>
