Removing the term FTF throughout

--- a/app/views/ftf/awareness/water-grant-guidance.html
+++ b/app/views/ftf/awareness/water-grant-guidance.html
@@ -167,7 +167,7 @@
       <p class="govuk-body">If your project did not score highly enough, you will not be able to submit a full application.</p>
       <p class="govuk-body">You cannot submit a full application without going through Stage 1 and getting a project number.</p>
       <p class="govuk-body">You can withdraw your application at any time, but you must let RPA know.</p>
-      <p class="govuk-body"><a href="../eoi/v2-0/">Check if you can apply for a Farming Transformation Fund Water Management grant Round 3</a></p>
+      <p class="govuk-body"><a href="../eoi/v2-0/">Check if you can apply for a Water Management grant Round 3</a></p>
 
 
       <br><br><br>
